Add input event listeners

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="main h-full w-full flex flex-col items-center">
       <div>
         <input
+          id="capitalize-input"
           name="capitalize"
           class="mt-10 pl-3 capitalize"
           placeholder="Capitalize"
@@ -24,6 +25,7 @@
       </div>
       <div>
         <input
+          id="lowercase-input"
           name="lowercase"
           class="mt-10 pl-3 lowercase"
           placeholder="Lowercase"
@@ -32,6 +34,7 @@
       </div>
       <div>
         <input
+          id="uppercase-input"
           name="uppercase"
           class="mt-10 pl-3 uppercase"
           placeholder="Uppercase"
